force-app/main/default/objects/Liability__c/Liability__c.object-meta.xml
<CustomObject>
    <label>Liability</label>
    <nameField>
        <displayFormat>LB-{00000}</displayFormat>
        <label>Liabilities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>