force-app/main/default/objects/Liability__c/fields/Credit_Card_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Balance__c</fullName>
    <label>Credit Card Balance</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>