force-app/main/default/objects/Liability__c/fields/Credit_Card_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Limit__c</fullName>
    <label>Credit Card Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>