force-app/main/default/objects/Liability__c/fields/Current_Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Balance__c</fullName>
    <label>Current Loan Balance</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>