force-app/main/default/objects/Liability__c/fields/Lender_Name__c.field-meta.xml
<CustomField>
    <fullName>Lender_Name__c</fullName>
    <label>Lender Name</label>
    <type>TextArea</type>
</CustomField>