force-app/main/default/objects/Liability__c/fields/Liability_Source__c.field-meta.xml
<CustomField>
    <fullName>Liability_Source__c</fullName>
    <label>Liability Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit cards</fullName>
                <label>Credit Cards</label>
            </value>
            <value>
                <fullName>Personal loans</fullName>
                <label>Personal Loans</label>
            </value>
            <value>
                <fullName>Mortgages</fullName>
            </value>
            <value>
                <fullName>Pay Laters</fullName>
            </value>
            <value>
                <fullName>Vehicle Loans</fullName>
            </value>
            <value>
                <fullName>Other Liability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>