force-app/main/default/objects/Liability__c/fields/Monthly_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Repayment__c</fullName>
    <label>Monthly Repayment</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>