force-app/main/default/objects/Liability__c/fields/Pay_Later_Limit__c.field-meta.xml
<CustomField>
    <fullName>Pay_Later_Limit__c</fullName>
    <label>Pay Later Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>