force-app/main/default/objects/Liability__c/fields/Property_value__c.field-meta.xml
<CustomField>
    <fullName>Property_value__c</fullName>
    <label>Property Value</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>