force-app/main/default/objects/Liability__c/fields/provider_name__c.field-meta.xml
<CustomField>
    <fullName>provider_name__c</fullName>
    <label>Provider Name</label>
    <type>TextArea</type>
</CustomField>