force-app/main/default/objects/Liability__c/fields/to_Consolidate_Liability__c.field-meta.xml
<CustomField>
    <fullName>to_Consolidate_Liability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>to Consolidate Liability</label>
    <type>Checkbox</type>
</CustomField>