force-app/main/default/objects/Liability__c/fields/To_Pay_Out_Trade_In__c.field-meta.xml
<CustomField>
    <fullName>To_Pay_Out_Trade_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Pay Out / Trade In</label>
    <type>Checkbox</type>
</CustomField>