force-app/main/default/objects/Liability__c/recordTypes/Other_Liabilities.recordType-meta.xml
<RecordType>
    <fullName>Other_Liabilities</fullName>
    <active>true</active>
    <label>Other Liabilities</label>
</RecordType>