force-app/main/default/objects/Liability__c/recordTypes/Pay_Later_Account.recordType-meta.xml
<RecordType>
    <fullName>Pay_Later_Account</fullName>
    <active>true</active>
    <label>Pay Later Account</label>
</RecordType>